Use auto overflow to avoid mobile layout issues.

--- a/styles/global.css
+++ b/styles/global.css
@@ -17,6 +17,7 @@ body {
 main {
   --article-background-color: rgb(31, 31, 32);
   background-color: var(--article-background-color);
+  overflow-x: auto;
 }
 
 svg {
